# autotools

./: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  libtool
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
example/: add_test  add_test.c
example/.deps/: add_test.Po  example_add_test-add_test.Po
example/.libs/: add_test
include/: add.h
src/: add.c  lib_libadd_la-add.lo  libs_libadd_la-add.lo
src/.deps/: add.Plo  add.Po  lib_libadd_a-add.Po  lib_libadd_la-add.Plo  libadd_so-add.Po  libs_libadd_a-add.Po  libs_libadd_la-add.Plo  libs_libadd_so-add.Po  libvt_so-add.Po
