#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
#AC_INIT([FULL-PACKAGE-NAME], [VERSION], [BUG-REPORT-ADDRESS])
AC_INIT([add_test], [1.0], [duanzhongwei@jcble.com])
AC_CONFIG_SRCDIR([example/add_test.c])
AC_CONFIG_HEADERS([config.h])


AM_INIT_AUTOMAKE([-Wall -Werror subdir-objects])


# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
#LT_INIT
#AC_PROG_LIBTOOL
AC_PROG_RANLIB


AC_CONFIG_FILES([Makefile])
AC_OUTPUT
